Use Google Play Inapp-billing for donations on Android&ChromeOS
# Conflicts:
#	libs/ui/KisWelcomePageWidget.cpp
#	libs/ui/KisWelcomePageWidget.h

(cherry picked from commit 32d7b773a76fe52d160cc1e0c2714130dde13b69)

--- a/packaging/android/apk/res/values/strings.xml
+++ b/packaging/android/apk/res/values/strings.xml
@@ -8,5 +8,7 @@
 	<string name="remote_action_swiperight">Swipe Right</string>
 	<string name="remote_action_circlecw">Circle Clockwise</string>
 	<string name="remote_action_circleccw">Circle Counter-Clockwise</string>
+	<string name="something_wrong">Something went wrong...</string>
+	<string name="cancelled">Cancelled</string>
 </resources>
 
