--- a/HACKING
+++ b/HACKING
@@ -81,6 +81,9 @@ Class naming
 	pattern. All files should start with 'Kis', all classes with the 'Kis' prefix.
     This filename should be the same as the classname: KisNewClass.h, KisNewClass.
 
+    Filenames in plugins do not start with Kis; only in libraries. Do not make new
+    classes that start with Ko.
+
 Function naming
 
 	Functions should be named in camelBackedFashion, to conform to Qt's standards.
